# django-serializable-model

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  changelog.sh  django_serializable_model.py  maidfile.md  pyproject.toml  release.sh  serializable.py  setup.py
tests/test_project/: README.md  pytest.ini  settings.py
tests/test_project/test_app/: models.py  tests.py
